--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -519,5 +519,8 @@
   "view": "Да видиш",
   "view_alias": "Преглед на псевдоним",
   "recipient_required": "Изисква се получател",
-  "unregistered_address": "Нерегистриран адрес"
+  "unregistered_address": "Нерегистриран адрес",
+  "no_public_key_title": "Внимание! - Този акаунт не притежава публичен ключ!",
+  "not_registered_title": "Този акаунт не е регистриран в блокчейна",
+  "not_registered_warning": "Този акаунт все още няма транзакции. Ако възнамерявате да използвате този акаунт за изпращане и/или получаване, препоръчително е да го активирате сега."
 }
