--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -519,5 +519,8 @@
   "view": "Για να δω",
   "view_alias": "Δείτε το Alias",
   "recipient_required": "Απαιτείται ο παραλήπτης",
-  "unregistered_address": "Μη καταχωρημένη διεύθυνση"
+  "unregistered_address": "Μη καταχωρημένη διεύθυνση",
+  "no_public_key_title": "Προειδοποίηση! - Αυτός ο λογαριασμός δεν διαθέτει δημόσιο κλειδί!",
+  "not_registered_title": "Αυτός ο λογαριασμός δεν είναι εγγεγραμμένος στο blockchain",
+  "not_registered_warning": "Αυτός ο λογαριασμός δεν έχει ακόμη συναλλαγές. Εάν σκοπεύετε να χρησιμοποιήσετε αυτόν τον λογαριασμό για αποστολή και/ή λήψη, συνιστάται να ενεργοποιήσετε αυτόν τον λογαριασμό τώρα."
 }
