--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -519,5 +519,8 @@
   "view": "देखना",
   "view_alias": "उपनाम देखें",
   "recipient_required": "प्राप्तकर्ता आवश्यक है",
-  "unregistered_address": "अपंजीकृत पता"
+  "unregistered_address": "अपंजीकृत पता",
+  "no_public_key_title": "चेतावनी! - इस खाते के पास कोई सार्वजनिक कुंजी नहीं है!",
+  "not_registered_title": "यह खाता ब्लॉकचेन में पंजीकृत नहीं है",
+  "not_registered_warning": "इस खाते में अभी तक कोई लेन-देन नहीं हुआ है। यदि आप भेजने और/या प्राप्त करने के लिए इस खाते का उपयोग करने का इरादा रखते हैं, तो इस खाते को अभी सक्रिय करने की अनुशंसा की जाती है।"
 }
