--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -519,5 +519,8 @@
   "view": "Увидеть",
   "view_alias": "Посмотреть псевдоним",
   "recipient_required": "Требуется получатель",
-  "unregistered_address": "Незарегистрированный адрес"
+  "unregistered_address": "Незарегистрированный адрес",
+  "no_public_key_title": "Предупреждение! - У этой учетной записи нет открытого ключа!",
+  "not_registered_title": "Этот аккаунт не зарегистрирован в блокчейне",
+  "not_registered_warning": "В этом аккаунте еще нет транзакций. Если вы собираетесь использовать эту учетную запись для отправки и/или получения, рекомендуется активировать эту учетную запись сейчас."
 }
