--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -519,5 +519,8 @@
   "view": "Видети",
   "view_alias": "Виев Алиас",
   "recipient_required": "Прималац је обавезан",
-  "unregistered_address": "Нерегистрована адреса"
+  "unregistered_address": "Нерегистрована адреса",
+  "no_public_key_title": "Упозорење! - Овај налог не поседује јавни кључ!",
+  "not_registered_title": "Овај налог није регистрован у блоцкцхаин-у",
+  "not_registered_warning": "Овај налог још увек нема трансакција. Ако намеравате да користите овај налог за слање и/или примање, препоручује се да одмах активирате овај налог."
 }
