--- a/web/angular-wallet/src/locales/tr.json
+++ b/web/angular-wallet/src/locales/tr.json
@@ -519,5 +519,8 @@
   "view": "Görmek",
   "view_alias": "Takma Adı Görüntüle",
   "recipient_required": "alıcı gerekli",
-  "unregistered_address": "Kayıtsız Adres"
+  "unregistered_address": "Kayıtsız Adres",
+  "no_public_key_title": "Uyarı! - Bu hesabın ortak anahtarı yok!",
+  "not_registered_title": "Bu hesap blok zincirinde kayıtlı değil",
+  "not_registered_warning": "Bu hesapta henüz işlem yok. Bu hesabı göndermek ve/veya almak için kullanmayı düşünüyorsanız, bu hesabı şimdi etkinleştirmeniz önerilir."
 }
