--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -519,5 +519,8 @@
   "view": "Бачити",
   "view_alias": "Переглянути псевдонім",
   "recipient_required": "Потрібен одержувач",
-  "unregistered_address": "Незареєстрована адреса"
+  "unregistered_address": "Незареєстрована адреса",
+  "no_public_key_title": "УВАГА! - Цей обліковий запис не володіє відкритим ключем!",
+  "not_registered_title": "Цей обліковий запис не зареєстровано в блокчейні",
+  "not_registered_warning": "Цей рахунок ще не має транзакцій. Якщо ви збираєтеся використовувати цей обліковий запис для надсилання та/або отримання, рекомендуємо активувати цей обліковий запис зараз."
 }
