--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -541,5 +541,6 @@
   "enter_recipient_public_key": "Enter the recipient's public key.",
   "enter_recipient_public_key_hint": "The recipient's account is unsafe, so a transfer without the recipient's public key is not allowed.",
   "recipient_public_key_invalid": "Recipient Address/Id does not match given public key",
-  "recipient_public_key_valid": "Recipient Address/Id and public key match"
+  "recipient_public_key_valid": "Recipient Address/Id and public key match",
+  "manage_accounts": "Manage Accounts",
 }
